     variable ~mu4e-cache-maildir-list~ if you have a lot of maildirs
     and it gets slow.
   - change the default value for
     ~org-mu4e-link-query-in-headers-mode~ to ~nil~, ie. by default
     link to the message, not the query, as this is usually more useful
     behavior.
   - overwrite target message files that already exist, rather than
     erroring out.

** 0.9.13

*** contributors

    Attila, Daniele Pizzolli, Charles-H.Schulz, David C Sterrat,
    Dirk-Jan C. Binnema, Eike Kettner, Florian Lindner, Foivos
    S. Zakkak, Gour, KOMURA Takaaki, Pan Jie, Phil Hagelberg, thdox,
    Tiago Saboga, Titus von der Malsburg

    (and of course all people who reported issues, provided
    suggestions etc.)

*** mu/mu4e/guile

    - NEWS (this file) is now visible from within mu4e – "N" in the main-menu.

    - make `mu4e-headers-sort-field', `mu4e-headers-sort-direction'
      public (that, is change the prefix from mu4e~ to mu4e-), so
      users can manipulate them

    - make it possible the 'fancy' (unicode) characters separately for
      headers and marks (see the variable `mu4e-use-fancy-chars'.)

    - allow for composing in a separate frame (see
      `mu4e-compose-in-new-frame')

    - add the `:thread-subject' header field, for showing the subject
      for a thread only once. So, instead of (from the manual):

      #+BEGIN_EXAMPLE
06:32        Nu    To Edmund Dantès    GstDev       + Re: Gstreamer-V4L...
15:08        Nu    Abbé Busoni         GstDev         + Re: Gstreamer-V...
18:20        Nu    Pierre Morrel       GstDev           \ Re: Gstreamer...
2013-03-18   S     Jacopo              EmacsUsr   + emacs server on win...
2013-03-18   S     Mercédès            EmacsUsr     \ RE: emacs server ...
2013-03-18   S     Beachamp            EmacsUsr   + Re: Copying a whole...
22:07        Nu    Albert de Moncerf   EmacsUsr     \ Re: Copying a who...
2013-03-18   S     Gaspard Caderousse  GstDev     | Issue with GESSimpl...